--- a/rpm/harbour-tabatimer.yaml
+++ b/rpm/harbour-tabatimer.yaml
@@ -34,3 +34,5 @@ Files:
 - /usr/share/applications
 - /usr/share/icons/hicolor/86x86/apps
 PkgBR: []
+QMakeOptions:
+- VERSION='%{version}-%{release}'
