--- a/rpm/harbour-tabatimer.yaml
+++ b/rpm/harbour-tabatimer.yaml
@@ -1,6 +1,6 @@
 Name: harbour-tabatimer
 Summary: Tabatimer
-Version: 1.5.1
+Version: 1.6.1
 Release: 1
 Group: Qt/Qt
 URL: http://example.org/
@@ -25,7 +25,8 @@ PkgConfigBR:
 Requires:
 - sailfishsilica-qt5 >= 0.10.9
 Files:
-- '%{_bindir}'
+- '%defattr(644,root,root,-)'
+- '%attr(655,-,-) %{_bindir}'
 - '%{_datadir}/%{name}/qml'
 - '%{_datadir}/applications/%{name}.desktop'
 - '%{_datadir}/icons/hicolor/86x86/apps/%{name}.png'
